5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1674_1872.log
== TEST (2019-04-25 11:24:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas:"))
y = float(input("coordenadas:"))

if((y > 0) and (x > 0)):
	print("Eixo X")
elif((y < 0) and (x < 0)):
	print("Eixo X")
elif((y > 0) and (x < 0)):
	print("Eixo Y")
elif((y < 0) and (x > 0)):
	print("Eixo y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas:"))
y = float(input("coordenadas:"))

if((y => 0) or (x => 0)):
	print("Eixo X")
elif((y <= 0) and (x < 0)):
	print("Eixo X")
elif((y > 0) and (x < 0)):
	print("Eixo Y")
elif((y < 0) and (x > 0)):
	print("Eixo y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- ERROR:
File "XXXX", line 5
    if((y => 0) or (x => 0)):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:25:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas:"))
y = float(input("coordenadas:"))

if((y >= 0) or (x >= 0)):
	print("Eixo X")
elif((y <= 0) and (x < 0)):
	print("Eixo X")
elif((y > 0) and (x < 0)):
	print("Eixo Y")
elif((y < 0) and (x > 0)):
	print("Eixo y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo X")
elif((y <= 0) and (x < 0)):
	print("Eixo X")
elif((y > 0) and (x < 0)):
	print("Eixo Y")
elif((y < 0) and (x > 0)):
	print("Eixo y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:26:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo X")
elif((y <= 0) and (x <= 0)):
	print("Eixo X")
elif((y >= 0) and (x <= 0)):
	print("Eixo Y")
elif((y <= 0) and (x >= 0)):
	print("Eixo y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:27:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo Y")
elif((x <= 0) and (y <= 0)):
	print("Eixo Y")
elif((x >= 0) and (y <= 0)):
	print("Eixo X")
elif((x <= 0) and (y >= 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:27:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo Y")
elif((x <= 0) and (y <= 0)):
	print("Eixo Y")
elif((x >= 0) and (y <= 0)):
	print("Eixo X")
elif((x <= 0) and (y >= 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.161879
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:27:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo Y")
elif((x <= 0) and (y <= 0)):
	print("Eixo Y")
elif((x >= 0) and (y <= 0)):
	print("Eixo X")
elif((x <= 0) and (y >= 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.151194
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo Y")
elif((x <= 0) and (y <= 0)):
	print("Eixo Y")
elif((x >= 0) and (y <= 0)):
	print("Eixo X")
elif((x <= 0) and (y >= 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y >= 0)):
	print("Eixo Y")
elif((x <= 0) or (y <= 0)):
	print("Eixo Y")
elif((x >= 0) or (y <= 0)):
	print("Eixo X")
elif((x <= 0) or (y >= 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:28:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x > 0) or (y > 0)):
	print("Eixo Y")
elif((x < 0) or (y < 0)):
	print("Eixo Y")
elif((x > 0) or (y < 0)):
	print("Eixo X")
elif((x < 0) or (y > 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:29:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x > 0) or (y > 0)):
	print("Eixo Y")
elif((x < 0) or (y < 0)):
	print("Eixo Y")
elif((x > 0) or (y < 0)):
	print("Eixo X")
elif((x < 0) or (y > 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.184949
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:29:07) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x > 0) or (y > 0)):
	print("Eixo Y")
elif((x < 0) or (y < 0)):
	print("Eixo Y")
elif((x > 0) or (y < 0)):
	print("Eixo X")
elif((x < 0) or (y > 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:29:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y > 0)):
	print("Eixo Y")
elif((x <= 0) or (y < 0)):
	print("Eixo Y")
elif((x >= 0) or (y < 0)):
	print("Eixo X")
elif((x <= 0) or (y > 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.139509
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo Y
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo Y
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo Y
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:29:22) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y > 0)):
	print("Eixo Y")
elif((x <= 0) or (y < 0)):
	print("Eixo Y")
elif((x >= 0) or (y < 0)):
	print("Eixo X")
elif((x <= 0) or (y > 0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo Y
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:29:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y > 0)):
	print("Eixo X")
elif((x <= 0) or (y < 0)):
	print("Eixo Y")
elif((x >= 0) or (y < 0)):
	print("Eixo X")
elif((x <= 0) or (y > 0)):
	print("Eixo Y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.149076
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:29:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y > 0)):
	print("Eixo X")
elif((x <= 0) or (y < 0)):
	print("Eixo Y")
elif((x >= 0) or (y < 0)):
	print("Eixo X")
elif((x <= 0) or (y > 0)):
	print("Eixo Y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:30:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) or (y > 0)):
	print("Eixo X")
elif((x <= 0) or (y < 0)):
	print("Eixo Y")
elif((x >= 0) or (y < 0)):
	print("Eixo X")
elif((x <= 0) or (y > 0)):
	print("Eixo Y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) and (y > 0)):
	print("Eixo X")
elif((x <= 0) and (y < 0)):
	print("Eixo Y")
elif((x >= 0) and (y < 0)):
	print("Eixo X")
elif((x <= 0) and (y > 0)):
	print("Eixo Y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:31:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) and (y > 0)):
	print("Eixo X")
elif((x <= 0) and (y < 0)):
	print("Eixo Y")
elif((x >= 0) and (y < 0)):
	print("Eixo X")
elif((x <= 0) and (y > 0)):
	print("Eixo Y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.176613
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:31:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x >= 0) and (y > 0)):
	print("Eixo X")
elif((x <= 0) and (y < 0)):
	print("Eixo Y")
elif((x >= 0) and (y < 0)):
	print("Eixo X")
elif((x <= 0) and (y > 0)):
	print("Eixo Y")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:13:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x < 0) and (y > 0)):
	print("Q2")
elif((x > 0) and (y > 0)):
	print("Q1")
elif((x < 0) and (y < 0)):
	print("Q3")
elif((x > 0) and (y < 0)):
	print("Q4")
elif((x == 0) and (y >0)):
	print("Eixo Y")
elif((x > 0) and (y ==0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 12:15:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x < 0) and (y > 0)):
	print("Q2")
elif((x > 0) and (y > 0)):
	print("Q1")
elif((x < 0) and (y < 0)):
	print("Q3")
elif((x > 0) and (y < 0)):
	print("Q4")
elif((x == 0) and (y >0) or (y < 0)):
	print("Eixo Y")
elif((x > 0) or (x <0) and (y ==0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 12:15:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("coordenadas x:"))
y = float(input("coordenadas y:"))

if((x < 0) and (y > 0)):
	print("Q2")
elif((x > 0) and (y > 0)):
	print("Q1")
elif((x < 0) and (y < 0)):
	print("Q3")
elif((x > 0) and (y < 0)):
	print("Q4")
elif((x == 0) and (y >0) or (y < 0)):
	print("Eixo Y")
elif((x > 0) or (x <0) and (y ==0)):
	print("Eixo X")
elif((x == 0) and (y == 0)):
	print("Origem")
-- EXECUTION TIME:
0.152889
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
